--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Your Sidebar Name"
   avatar           : "profile.png"
-  bio              : "MS student at Uiversity of Southern California"
+  bio              : "MS @ Uiversity of Southern California"
   location         : "Los Angeles"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=A8J42tQAAAAJ&hl=en&oi=ao"
-  email            :
+  email            : "zizhaoh@usc.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -99,11 +99,11 @@ author:
   github           : "academicpages"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/zz2z2z2z/"
+  instagram        : "zz2z2z2z"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
