--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Zizhao Hu"
   avatar           : "profile.png"
   bio              : "MS @ Uiversity of Southern California"
   location         : "Los Angeles"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "zizhao-hu"
   google_plus      :
   keybase          :
   instagram        : "zz2z2z2z"
