--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : "zizhao-hu"
   google_plus      :
   keybase          :
-  instagram        : "zz2z2z2z"
+  instagram        : 
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
