--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zizhao Hu"
-  avatar           : "profile.png"
+  avatar           : "profile.jfjf"
   bio              : "MS @ Uiversity of Southern California"
   location         : "Los Angeles"
   employer         :
